# json-lesson

./: README.md  data.json  json-lesson.cabal
app/: Main.hs
