cabal-version:      2.4
name:               json-lesson
version:            0.1.0.0
author:             Vincent
maintainer:         vpark45@gmail.com
extra-source-files: CHANGELOG.md
                    README.md

executable json-lesson
  main-is:          Main.hs
  build-depends:    base ^>=4.12.0.0
                  , aeson
                  , bytestring
                  , text
  hs-source-dirs:   app
  default-language: Haskell2010
  extensions:       OverloadedStrings
                  , DeriveGeneric
